--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASTER MD | Session</title>
+    <title>MALAKA MD | Session</title>
     <meta property="og:image" content="https://i.imgur.com/HQ8CENR.jpeg">
     <meta property="og:title" content="Queen Izumi">
 <style>
@@ -329,7 +329,7 @@
       <h1 class="h">
         <centre>
         <span>SELECT <span>
-          <span>MASTER <span>
+          <span>MALAKA <span>
                 <span>MD <span>
                  <span>INFO<span>
                 </centre>
@@ -343,19 +343,19 @@
         <br><br>
        <button onclick="location.href='/pair'" class="button">PAIR CODE</button>
         <br><br>
-      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/MrMasterOfc/MASTER-MD'" class="button">Deploy</button>
+      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/Malaka20/MALAKA-SESSION-ID-V1'" class="button">Deploy</button>
         <br><br>
-            <button onclick="location.href='https://wa.me/+94720797915'" class="button">OWNER</button>
+            <button onclick="location.href='https://wa.me/+94742287793'" class="button">OWNER</button>
        <br><br>
-       <button onclick="location.href='https://whatsapp.com/channel/0029VaWWZa1G3R3c4TPADo0M'" class="button">WHATSAPP CHANNEL</button>
+       <button onclick="location.href='https://chat.whatsapp.com/L6pVRO4P2586kIlnLlYWb3'" class="button">WHATSAPP CHANNEL</button>
          <br><br>
-        <button onclick="location.href='https://github.com/MrSahanOfcSL'" class="button">GITHUB</button>
+        <button onclick="location.href='https://malaka-md.vercel.app'" class="button">GITHUB</button>
        <br><br>
     </form>
       <button onclick="location.href='www.youtube.com/@sahanmaduwantha2006'" class="button">YOUTUBE</button>
     </div>
     <footer>
-       <p>© MASTER MD WHATSAPP USER BOT</p>
+       <p>© MALAKA MD WHATSAPP USER BOT</p>
     </footer>
   </body>
   </html>
